assets/css/styles.css
/* Colors sourced from: https://www.iamsajid.com/colors/ */

@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');

:root 
{    
    --ff: "Syne", sans-serif;
    --ff2: "Fira Code", monospace;
    --h1: 800 2rem/1.2em var(--ff);
    --h1-header-footer: 800 1rem/1.2em var(--ff);
    --p: 400 1rem/1.5em var(--ff);
    --p-code: 300 .7rem/2em var(--ff2);
    --hue: 0;
    --color-primary: hsl(259, 50%, 10%);
    --color-secondary: hsl(259, 50%, 90%);
    --color-tertiary: hsl(319, 80%, 80%);
    --color-accent: hsl(125, 80%, 80%);
    --color-sidebar: hsl(259, 50%, 15%);
    --color-header-footer: hsl(260, 67%, 16%);

    --color-info: hsl(207, 100%, 30%);
    --background-info: hsl(195, 100%, 87%);  

    --color-success: hsl(103, 100%, 23%);
    --background-success: hsl(82, 66%, 85%);  

    --color-warning: hsl(36, 100%, 31%);
    --background-warning: hsl(48, 97%, 85%);

    --color-error: hsl(357, 100%, 42%);
    --background-error: hsl(0, 100%, 86%);

    --sb-width: 18rem;
}

.light-mode
{
    --color-primary: hsl(259, 50%, 90%);
    --color-secondary: hsl(259, 50%, 15%);
    --color-tertiary: hsl(319, 80%, 20%);
    --color-accent: hsl(145, 30%, 74%);
    --color-sidebar: hsl(264, 64%, 74%);
    --color-header-footer: hsl(263, 82%, 89%);
}

/* Set transition times for entire site */
body,
header,
footer,
.sidebar
{
    transition:
        width 0.3s ease,
        height 0.3s ease,
        background 0.2s ease,
        visibility 0.2s ease;
}

body 
{
    background: var(--color-primary);
    color: var(--color-secondary);
    font-family: var(--ff);
    font: var(--p);
    margin: 0;
}

.grid-container
{
    display: grid;
    min-height: 100vh;
    grid-template-rows: auto 1fr auto;
    grid-template-columns: auto 1fr auto;
}

/* Header and Footer */

header,
footer,
main
{
    padding: 0 1rem;
}

header,
footer 
{
    min-height: 5vh;

    background: var(--color-header-footer);
    color: var(--color-secondary);
}

header img
{ 
    display: block;
    float: left;
    margin: 5px 20px 0px 35px;
    width: 20px; 
    height: 20px; 
}

header h1,
footer h1
{
    font: var(--h1-header-footer);
    padding: 0.25rem 0;
}

header 
{
    grid-column: span 3;
    inset: 0 auto 0 0;
    position: sticky;
    width: auto;
    z-index: 3;
    align-self: start;
    top: 0;
}

footer
{
    grid-column: span 3;
}

/* Content */

main 
{
    grid-column: span 2;
    width: auto;
}

main > div
{
    border: 1px solid var(--color-accent);
    border-radius: 1em;
    margin: 20px 10px;
    padding: 1em;
}

body.sb-collapsed 
{
    --sb-width: 5rem;
    --sb-adjustment: var(--sb-min-adjustment);
}

a 
{
    font: 800 1rem/1em var(--ff);
    color: var(--color-accent);
    text-underline-offset: 4px;
}

h1 
{
    font: var(--h1);
}

